# c4

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
bot/: __init__.py  api_client.py  handlers.py  keyboards.py  main.py  states.py
core/base/: config.py  crud.py  model.py
core/db/: session.py
migrations/: env.py
migrations/versions/: 521fac013bb9_init_table_objects.py  de3b1c1d4bbb_add_relationship_for_model_users.py  ed820e372688_init_table_users.py  fa826d0b923d_fix_column.py
src/api/: objects.py  users.py
src/app/objects/: crud.py  model.py  schema.py  service.py
src/app/users/: crud.py  model.py  schema.py
tests/: conftest.py  test_api.py  test_api_client.py  test_crud.py  test_schemas.py  test_services.py
